# kagent-fork

./: .gitignore  local-toolserver.yaml  mock-modelconfig.yaml  mock-secret.yaml
dev/: toolserver.yaml
dev/mcp/: Dockerfile  README.md  deployment.yaml  entrypoint.sh  service.yaml  test_openai.py
go/controller/internal/httpserver/: server.go
go/controller/internal/httpserver/handlers/: tools.go
k8s/mcp/: deployment.yaml  service.yaml
manifests/: toolserver.yaml
python/: pyproject.toml  requirements.txt
python/src/kagent/: cli.py
python/src/kagent/api/: main.py  mcp.py  modelconfigs.py  tools.py
python/src/kagent/tools/hello/: __init__.py  _hello.py
python/src/kagent/tools/mcp/: sse.py
scripts/: build-mcp.sh
ui/conf/: nginx.conf
ui/src/app/: layout.tsx
ui/src/app/actions/: models.ts  tools.ts  utils.ts
ui/src/app/servers/: page.tsx
ui/src/app/tools/: page.tsx
ui/src/components/: AgentCard.tsx  AgentGrid.tsx  AgentsProvider.tsx  Header.tsx  kagent-logo-text.tsx
ui/src/lib/: toolUtils.ts  utils.ts
