[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kagent"
version = "0.1.0"
description = "Kagent tools"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer",
    "autogen-core==0.5.1",
    "autogen-ext==0.5.1",
    "pydantic>=2.0.0",
    "mcp==1.6.0",
    "openai==1.75.0"
]

[project.optional-dependencies]
jupyter-executor = [
    "ipykernel>=6.29.5",
    "nbclient>=0.10.2",
]
test = [
  "pytest>=8.3.5",
  "pytest-asyncio>=0.25.3",
]
lint = [
  "ruff>=0.9.2",
]

[project.scripts]
kagent-engine = "kagent.cli:run"
tool_gen = "kagent.tools.utils.tool_gen:main"

[tool.uv.sources]
autogenstudio = { git = "https://github.com/kagent-dev/autogen.git", subdirectory = "python/packages/autogen-studio", rev = "bec1baa06c2c16a73e216e88a951a1d93fafb169" }
autogen-agentchat = { git = "https://github.com/kagent-dev/autogen.git", subdirectory = "python/packages/autogen-agentchat", rev = "bec1baa06c2c16a73e216e88a951a1d93fafb169" }
autogen-ext = { git = "https://github.com/kagent-dev/autogen.git", subdirectory = "python/packages/autogen-ext", rev = "bec1baa06c2c16a73e216e88a951a1d93fafb169" }
autogen-core = { git = "https://github.com/kagent-dev/autogen.git", subdirectory = "python/packages/autogen-core", rev = "bec1baa06c2c16a73e216e88a951a1d93fafb169" }
kagent = { workspace = true }

[tool.ruff]
line-length = 120
fix = true
exclude = [
  "notebooks/",
]

target-version = "py312"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["E", "F", "W", "B", "Q", "I", "ASYNC", "T20"]
ignore = ["F401", "E501"]

[tool.hatch.build.targets.wheel]
packages = ["src/kagent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
python_files = "test_*.py"
python_functions = "test_*"
log_cli = true
log_cli_level = "INFO"
